# espruino-temperature-webapp

./: .gitignore  CMakeLists.txt  espruino.js  getTemp.c  readme.md  temperaturelog.service
Public/temperature/: index.html
